@@ -5723,4 +5723,6 @@ AbcdCBefgBhiBqz
 /(?:((abcd))|(((?:(?:(?:(?:abc|(?:abcdef))))b)abcdefghi)abc)|((*ACCEPT)))/
     1234abcd
 
+/(\2)(\1)/
+
 /-- End of testinput1 --/
